Adds action manager

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
             </select>
             <button id="startGame">Start Game</button>
         </div>
-        <div id="botHand" class="cardRow"></div>
-        <div id="botActiveCards" class="cardRow"></div>
-        <div id="playerActiveCards" class="cardRow"></div>
-        <div id="playerHand" class="cardRow"></div>
+        <row-element id="botHand" class="cardRow"></row-element>
+        <row-element id="botActiveCards" class="cardRow"></row-element>
+        <row-element id="playerActiveCards" class="cardRow"></row-element>
+        <row-element id="playerHand" class="cardRow"></row-element>
     </div>
     <script src="./bundle.js"></script>
 </body>
