Card slots added

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,22 @@
         </div>
         <row-element id="botHand" class="cardRow"></row-element>
         <div class="rowContainer">
-            <row-element id="botActiveCards" class="cardRow"></row-element>
+            <row-element id="botActiveCards" class="cardRow">
+            </row-element>
             <p id="botScore"></p>
         </div>
         <div class="rowContainer">
-            <row-element id="playerActiveCards" class="cardRow"></row-element>
+            <row-element id="playerActiveCards" class="cardRow">
+                <card-slot data-index="0"></card-slot>
+                <card-slot data-index="1"></card-slot>
+                <card-slot data-index="2"></card-slot>
+                <card-slot data-index="3"></card-slot>
+                <card-slot data-index="4"></card-slot>
+                <card-slot data-index="5"></card-slot>
+                <card-slot data-index="6"></card-slot>
+                <card-slot data-index="7"></card-slot>
+                <card-slot data-index="8"></card-slot>
+            </row-element>
             <p id="playerScore">0</p>
         </div>
         <div class="rowContainer">
